<?xml version="1.0" encoding="utf-8"?>
<!-- String assets -->
<resources>

    <string name="app_name">MPC</string>

    <string name="connection">Connection</string>
    <string name="settings">Settings</string>
    <string name="address">Address</string>
    <string name="port">Port</string>
    <string name="database">Database</string>
    <string name="refreshDB">Refresh Database</string>

    <string name="databaseButton">Renew Database</string>
    <string name="saveButton">Save</string>
    <string name="vinylIcon">Album</string>
    <string name="artistIcon">Artist</string>
    <string name="search">Search</string>
    <string name="searchLimit">Search Limit</string>
    <string name="searchLimitDescription">A lower limit makes search faster</string>

</resources>