<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for SettingsFragment -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="connection_category"
        android:title="@string/connection" >

        <EditTextPreference
            android:inputType="textNoSuggestions"
            android:key="address"
            android:summary="MPD server IP address"
            android:title="@string/address" />

        <EditTextPreference
            android:inputType="number"
            android:key="port"
            android:summary="MPD server port"
            android:title="@string/port" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="database_category"
        android:title="@string/database">

        <Preference
            android:key="renewDatabase"
            android:title="@string/refreshDB" />
    </PreferenceCategory>

</PreferenceScreen>